test/tests/errors/error-trap-no-label.sm
// true
// false
// false
/**/
/**/

program {
    trap {
        output 1;
        output 2;
        output 3;
        escapeto d;
a:
        output 4;
b:
        output 4;
c:
        output 4;
    }
}